--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -5,7 +5,13 @@
 
 {% capture favicon_path %}{{ '/assets/img/favicons' | relative_url }}{% endcapture %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ favicon_path }}/apple-touch-icon.png">
+<link rel="andriod-chrome-96x96" sizes="96x96" href="{{ favicon_path }}/android-chrome-96x96.png">
+<link rel="apple-touch-icon" sizes="76x76" href="{{ favicon_path }}/apple-touch-icon.png">
+<link rel="favicon-16x16" sizes="16x16" href="{{ favicon_path }}/favicon-16x16.png">
+<link rel="favicon-32x32" sizes="32x32" href="{{ favicon_path }}/favicon-32x32.png">
+<link rel="mstile-150x150" sizes="150x150" href="{{ favicon_path }}/mstile-150x150.png">
+<link rel="favicon" sizes="32x32" href="{{ favicon_path }}/favicon.png">
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="{{ favicon_path }}/apple-touch-icon.png"> -->
 <link rel="icon" type="image/png" sizes="32x32" href="{{ favicon_path }}/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ favicon_path }}/favicon-16x16.png">
 <link rel="manifest" href="{{ favicon_path }}/site.webmanifest">
