--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -10,12 +10,12 @@
 <link rel="favicon-16x16" sizes="16x16" href="{{ favicon_path }}/favicon-16x16.png">
 <link rel="favicon-32x32" sizes="32x32" href="{{ favicon_path }}/favicon-32x32.png">
 <link rel="mstile-150x150" sizes="150x150" href="{{ favicon_path }}/mstile-150x150.png">
-<link rel="favicon" sizes="32x32" href="{{ favicon_path }}/favicon.png">
-<!-- <link rel="apple-touch-icon" sizes="180x180" href="{{ favicon_path }}/apple-touch-icon.png">
+<link rel="favicon" sizes="32x32" href="{{ favicon_path }}/favicon.ico">
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="{{ favicon_path }}/apple-touch-icon.png"> -->
 <link rel="icon" type="image/png" sizes="32x32" href="{{ favicon_path }}/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ favicon_path }}/favicon-16x16.png">
 <link rel="manifest" href="{{ favicon_path }}/site.webmanifest">
-<link rel="shortcut icon" href="{{ favicon_path }}/favicon.ico"> -->
+<!-- <link rel="shortcut icon" href="{{ favicon_path }}/favicon.ico"> -->
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
 <meta name="application-name" content="{{ site.title }}">
 <meta name="msapplication-TileColor" content="#da532c">
