--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,3 +3,10 @@
   {% capture path %}comments/{{ site.comments.active }}.html{% endcapture %}
   {% include {{ path }} %}
 {% endif %}
+<script src="https://utteranc.es/client.js"
+        repo="Sicoree/comments"
+        issue-term="pathname"
+        theme="photon-dark"
+        crossorigin="anonymous"
+        async>
+</script>
